# clase-ciencia-de-datos

./: .gitignore  main.py  pyproject.toml  requirements.txt
Clase 4/: Perceptron_con_Sklearn_ipynb.ipynb  perceptron_tutorial (1).ipynb
Parcial1/: Parcial1_CienciaDatos.ipynb  app_flores.py
Parcial1/artefactos_parcial1/: class_names.json
backend/: Dockerfile  docker-compose.yml  requirements.txt
backend/app/: detector.py  main.py
codificador/: app_predictor.py  formatear.py  scaler.jb
mobile-app/: app.json  package.json
mobile-app/app/: _layout.tsx  index.tsx
mobile-app/constants/: config.ts
notebooks/Clase 5/: Avanzada_Cuaderno_2_ANN_Red_Neuronal_sklearn_keras_tensorflow.ipynb
notebooks/Clase 6/: Avanzada_Cuaderno_3_ANN_Red_neuronal_básica_de_regresion_lineal_Ejemplo 1.ipynb  Deteccion-numeros.ipynb  Red_Neuronal_Numeros.ipynb  model.keras
notebooks/Clase 7/: Avanzada_Cuaderno_3_ANN_Red_neuronal_básica_de_regresion_lineal_Ejemplo 1.ipynb  Red_Neuronal_Numeros2.ipynb
notebooks/Clase 8/: Avanzada_Cuaderno_4_ANN_Red_Neuronal_Clasificación_(Redes_densas).ipynb  Red_Neuronal_Circulos_Concentricos.ipynb
notebooks/Cuaderno 7/: Avanzada_Cuaderno_7_CNN_Redes_Neuronales_Convolucionales_.ipynb  Clase_CNN_Sergio.ipynb  app.py
notebooks/Cuaderno 9/: Tarea_PPE_Cuaderno.ipynb
notebooks/Quiz 2/: Cuaderno_Quiz2_LicensePlate_YOLOv11_OCR_TransferLearning.ipynb
notebooks/Taller ANN Multiclass/: ANN_Multiclass_en_clase.ipynb  Instrucciones_Taller.md  Taller_ANN_Multiclass_EDA_PCA.ipynb  riesgo.csv
recursos_profesor/piano-main/: README.md  piano.py
(+7 files in other folders)
