[project]
name = "clase-ciencia-de-datos"
version = "0.1.0"
description = "Classroom notebooks and demos for computer vision and data science."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "opencv-python>=4.13.0.92",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "roboflow>=1.3.5",
    "streamlit>=1.44.1",
    "ultralytics>=8.4.41",
]
